@@ -134,6 +134,7 @@
 #include "node_manager.h" /* svr_is_request */
 #include "../lib/Libnet/lib_net.h" /* start_listener_addrinfo */
 #include "process_request.h" /* process_request */
+#include "net_connect.h" /* set_localhost_name */
 
 #define TASK_CHECK_INTERVAL    10
 #define RETRY_ROUTING_INTERVAL 45
@@ -296,6 +297,10 @@ int                     array_259_upgrade = FALSE;
 
 /* Globals to thread the accept port */
 pthread_t      accept_thread_id = -1;
+
+
+char server_localhost[PBS_MAXHOSTNAME + 1];
+size_t localhost_len = PBS_MAXHOSTNAME;
 /*
  * need_y_response - on create/clean initialization that would delete
  * information, obtain the operator approval first.
@@ -1753,6 +1758,7 @@ int main(
     msg_daemonname,
     log_buf);
 
+  set_localhost_name(server_localhost, localhost_len);
   /* initialize the server objects and perform specified recovery */
   /* will be left in the server's private directory  */
   /* NOTE:  env cleared in pbsd_init() */
