@@ -31,6 +31,7 @@ c - crash     b - bug fix    e - enhancement    f - new feature  n - note
       created connection was not added to the svr_conn table. This was not right. 
       We now always add the new connection to svr_conn.
   b - fix problem with mom segfault when using 8 or more gpus on mom node.
+  e - Made it so localhost is no longer hard coded. The string comes from getnameinfo.
 
 4.0.0
   e - make a threadpool for TORQUE server. The number of threads is 
